Stabilize Java reproduction receipt ordering